--- a/contact.html
+++ b/contact.html
@@ -10,20 +10,27 @@
 </head>
 <body>
    <br>
-   <h1>contact us</h1>
-   <ul  class="love">
-      <li><a href="index.html">home page</a></li>
-      <li><a href="about.html">about rite bite</a></li>
-      <li><a href="services.html">our services</a></li>
-      </ul>
+   <h1 class="contact">contact
+      <ul  class="love">
+         <a href="index.html">home</a></li>
+         <li><a href="about.html">about </a></li>
+         <a href="services.html"> services</a></li>
+         </ul>
+   </h1>
+  
+   <div>
    <p>you can contact us below</p>
-   <div class="number"><img src="/image/contact 2.png" width="20px" height="30px"><a href="https://wa.me.+2349019202545"> 09019202545</a></div>
+   <div class="number"><img src="/image/contact 2.png" width="20px" height="30px" ><a href="https://wa.me.+2349019202545"> 09019202545</a></div>
+
    <div class="gmail"><img src="/image/gmail 2.png" width="20px" height="20px"><a href="http://Gmail.com">jeromeclinton0@gmail.com</a></div>
+
+   
+  
    <br>
-   <h2>GET IN TOUCH</h2>
+   <h2 class="get">GET IN TOUCH</h2>
    <textarea name="subject" id="" cols="30" rows="3"></textarea>
    <br>
-   <textarea name="comment" id="textbox" cols="30" rows="10"></textarea>
+   <textarea name="comment" id="textbox" cols="30" rows="5"></textarea>
    <button class="button">click me</button>
 
 </body>
