--- a/index.html
+++ b/index.html
@@ -8,17 +8,17 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1 class="home"><img src="/image/logo.jpg" width ="20px" height="30px">HOME PAGE</h1>
-    <ul  class="love">
-        <li><a href="about.html">about rite bite</a></li>
-        <li><a href="services.html">our services</a></li>
+    <h1 class="home"><img src="/image/logo.jpg" width ="20px" height="30px">RITE BITE   <div class="love">
+        <li><a href="about.html">about </a></li>
+        <a href="services.html"> services</a></li>
         <li><a href="contact.html">contact us</a></li>
-    </ul>
+    </h1>
+   
     <img src="image/logo.jpg" id="image" 
     alt="image of cakes" width="100%" >
-    <a href="https://unsplash.com/images/food/cake"target="blank" 
+    <a href="https://unsplash.com/images/food/cake"target="blank" class="link"
     >visit rite bite.com for more pics</a>
  
-<h4>copyright &copy;2023</h4>
+<h4 class="link">copyright &copy;2023</h4>
 </body>
 </html>
