--- a/services.html
+++ b/services.html
@@ -8,13 +8,17 @@
    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-   <h2> pastries from rite bite</h2>
-   <ul  class="love">
-      <li><a href="index.html">home page</a></li>
-      <li><a href="about.html">about rite bite</a></li>
-      <li><a href="contact.html">contact us</a></li>
-      </ul>
-   <p>other pastries from your number one cake plug are availabe and they are ready for your orders</p>
+   <h2 class="pastries"> pastries
+
+      <div  class="love">
+         <a href="index.html">home</a></li>
+         <li><a href="about.html">about </a></li>
+         <a href="contact.html">contact us</a>
+      </div>
+   </h2>
+   
+   <p class="paragraph">other pastries from your number one cake plug are availabe and they are ready for your orders</p>
+   <div class="images">
    <ul>
    <li><a href="more cakes" class="cakes">cakes of different flavours</a></li>
    <img src="/image/three layer cake.jpg" alt="images" width="200px">
@@ -23,23 +27,24 @@
    <li><a href="more pictures" id="donuts">donuts and many more</a></li>
    <img src="/image/donuts.jpg" alt="donuts" width="200px">
    </ul>
-   
+   </div>
    <h3>list of available pastries according to the price</h3>
   <table>
     <tr>
-       <th class="pastries">available pastries;</th>
+       <th class=""> pastries</th>
        <th class="prices">cakes</th>
        <th class="prices">donuts</th>
        <th class="prices">meat pie</th>
     </tr>
-    <tr>
-       <td class="pastries">prices</td>
+      <tr>
+       <td class="">prices</td>
        <td class="prices">500</td>
        <td class="prices">200</td>
        <td class="prices">500</td>
     </tr>
 </table>
 <br>
+<div class="table">
 <p>choose your favourite pastries below</p>
 <input type="radio" name="pastries" id="" value="cake">cake
 <input type="radio" name="pastries" id="" value="donut">donut
@@ -49,7 +54,8 @@
 <input type="checkbox" name="goods" id="" value="cakes of different flavours">cakes of different flavours
 <input type="checkbox" name="goods" id="" value="donuts and more">donuts and more
 <br>
-<p>select your favourite</p>
+
+<p >select your favourite</p>
 <select name="pastries" id="">
    <option value="cakes">cakes</option>
    <option value="donuts">donuts</option>
@@ -60,6 +66,7 @@
 <br>
 <h3>our delivery system</h3>
 <p>rite bite is known for its fast home delivery system but also they have a pick up station for those interested all for your comfort</p>
+</div>
 <h4>create account</h4>
 
 <form action="" method="">
