--- a/contact.html
+++ b/contact.html
@@ -14,17 +14,12 @@
       <ul  class="love">
          <a href="index.html">home</a></li>
          <li><a href="about.html">about </a></li>
-         <a href="services.html"> services</a></li>
+         <a href="services.html"> pastries</a></li>
          </ul>
    </h1>
   
    <div>
    <p>you can contact us below</p>
-   <div class="number"><img src="/image/contact 2.png" width="20px" height="30px" ><a href="https://wa.me.+2349019202545"> 09019202545</a></div>
-
-   <div class="gmail"><img src="/image/gmail 2.png" width="20px" height="20px"><a href="http://Gmail.com">jeromeclinton0@gmail.com</a></div>
-
-   
   
    <br>
    <h2 class="get">GET IN TOUCH</h2>
@@ -32,6 +27,12 @@
    <br>
    <textarea name="comment" id="textbox" cols="30" rows="5"></textarea>
    <button class="button">click me</button>
+<br>
+<div class="cont">
+   <div class="number"><img src="image/contact 2.png" width="20px" height="20px" ><a href="tel:+2349019202545"> 09019202545</a></div>
+
+   <div class="gmail"><img src="image/gmail 2.png" width="20px" height="20px"><a href="http://Gmail.com">jeromeclinton0@gmail.com</a></div>
+</div>
 
 </body>
 </html>
