--- a/index.html
+++ b/index.html
@@ -8,11 +8,15 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1 class="home"><img src="/image/logo.jpg" width ="20px" height="30px">RITE BITE   <div class="love">
-        <li><a href="about.html">about </a></li>
-        <a href="services.html"> services</a></li>
-        <li><a href="contact.html">contact us</a></li>
-    </h1>
+    <div class="nav">
+        <h1 class="home"><img src="/image/logo.jpg" width ="20px" height="30px">RITE BITE   </h1>
+            <ul class="love">
+                <li><a href="about.html">about </a></li>
+                <li><a href="services.html"> pastries></li>
+                <li><a href="contact.html">contact</a></li>
+            </ul>
+    </div>
+    </div>
    
     <img src="image/logo.jpg" id="image" 
     alt="image of cakes" width="100%" >
