--- a/about.html
+++ b/about.html
@@ -15,14 +15,21 @@
          <a href="contact.html" target="_blank">contact</a></li>
          </ul>
    </h1>
-   
-      <div class="about">
-   <p>rite bite is an upcoming bakeyy that is going world wide and has high hope of  being <strong>the number one cake plug in the world</strong></p>
-   <p>the founder and ceo of rite bite is no other than <b class="cash"><em>Miss precious jerome eleihe</em></b> she is a graduate of federal university of owerri (FUTO) and is fast becoming the number one baker in the world with her ravishing and sweet pastries</p>
+  
    <p class="precious"><a href="https://www.wikipedia.org/" target="blank" id="precious">more about precious</a></p>
 </div>
-
-   <img src="/image/brown cake.jpg" alt="cake" width="70%">
+ 
+<div  class="hero">
+   <div class="naruto">
+      <h2>tasty brown cake</h2>
+   </div>
+    
+</div>
+   
+   <div class="about">
+      <p>rite bite is an upcoming bakeyy that is going world wide and has high hope of  being <strong>the number one cake plug in the world</strong></p>
+      <p>the founder and ceo of rite bite is no other than <b class="cash"><em>Miss precious jerome eleihe</em></b> she is a graduate of federal university of owerri (FUTO) and is fast becoming the number one baker in the world with her ravishing and sweet pastries
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit, provident harum! Incidunt quos neque nihil perferendis minima ipsam blanditiis vel quibusdam, laborum et? Eos, omnis! Vero in ad magnam voluptas?</p>
    <h2 ></h2><a href="https://www.wikipedia.org/" target="blank" class="cakes">more pastries by rite bite</a></h2>
 </body>
 </html>
