--- a/contact.html
+++ b/contact.html
@@ -28,11 +28,24 @@
    <textarea name="comment" id="textbox" cols="30" rows="5"></textarea>
    <button class="button">click me</button>
 <br>
-<div class="cont">
+
+
+ 
+<ul class="contact-links">
+   <div class="cont">
    <div class="number"><img src="image/contact 2.png" width="20px" height="20px" ><a href="tel:+2349019202545"> 09019202545</a></div>
-
+   <br>
    <div class="gmail"><img src="image/gmail 2.png" width="20px" height="20px"><a href="http://Gmail.com">jeromeclinton0@gmail.com</a></div>
+   <br>
+<!--victor-->
+   <h3 class="contact-link-header">Follow us on:</h3>
+   <div class="social-links-container">
+       <a class="social-link fab fa-facebook" href=""></a>
+       <a class="social-link fab fa-twitter" href=""></a>
+       <a class="social-link fab fa-instagram" href=""></a>
+       <a class="social-link fab fa-linkedin" href=""></a>
+   </div>
+</ul>
 </div>
-
 </body>
 </html>
